--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,9 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    implementation "com.google.dagger:dagger:2.14.1"
+    implementation "com.google.dagger:dagger-android-support:2.14.1"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.14.1"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
 }
