--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:2.14.1"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.14.1"
     annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
+
+
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
