--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,10 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.0'
 
+    //Testing
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+
 }
