--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     //Rxjava2
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.0'
