Added Navigator to be able to Navigate from one activity to another  -> AppScope (provided applicationwide)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.eventdetail.EventDetailActivity"></activity>
+        <activity android:name=".activities.selectedtickets.SelectedTicketsActivity"></activity>
     </application>
 
 </manifest>
